--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -6,6 +6,11 @@
       <ion-label>Home</ion-label>
     </ion-tab-button>
 
+    <ion-tab-button tab="myjobs">
+      <ion-icon name="list-circle-outline"></ion-icon>
+      <ion-label>My Jobs</ion-label>
+    </ion-tab-button>
+
     <ion-tab-button tab="tab2">
       <ion-icon name="ellipse"></ion-icon>
       <ion-label>Tab 2</ion-label>
@@ -14,6 +19,12 @@
     <ion-tab-button tab="tab3">
       <ion-icon name="square"></ion-icon>
       <ion-label>Tab 3</ion-label>
+    </ion-tab-button>
+
+
+    <ion-tab-button tab="settings">
+      <ion-icon name="settings-outline"></ion-icon>
+      <ion-label>Settings</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
