--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -44,6 +44,114 @@
       </ion-col>
     </ion-row>
 
+    <ion-row class="menu-rows" (click)="kyc()">
+      <ion-col size="2">
+        <ion-icon name="person-add-outline"></ion-icon>
+      </ion-col>
+      <ion-col size="8">
+        <span class="menu-label"> KYC </span>
+      </ion-col>
+      <ion-col size="2">
+        <ion-icon name="checkmark-outline"></ion-icon>
+      </ion-col>
+    </ion-row>
+
+    <ion-row class="menu-rows">
+      <ion-col size="2">
+        <ion-icon name="person-add-outline"></ion-icon>
+      </ion-col>
+      <ion-col size="8">
+        <span class="menu-label"> References </span>
+      </ion-col>
+      <ion-col size="2">
+        <ion-icon name="checkmark-outline"></ion-icon>
+      </ion-col>
+    </ion-row>
+
+    <ion-row class="menu-rows">
+      <ion-col size="2">
+        <ion-icon name="person-add-outline"></ion-icon>
+      </ion-col>
+      <ion-col size="8">
+        <span class="menu-label"> Training Schedule </span>
+      </ion-col>
+      <ion-col size="2">
+        <ion-icon name="checkmark-outline"></ion-icon>
+      </ion-col>
+    </ion-row>
+
+    <ion-row class="menu-rows">
+      <ion-col size="2">
+        <ion-icon name="person-add-outline"></ion-icon>
+      </ion-col>
+      <ion-col size="8">
+        <span class="menu-label"> Personal Details </span>
+      </ion-col>
+      <ion-col size="2">
+        <ion-icon name="checkmark-outline"></ion-icon>
+      </ion-col>
+    </ion-row>
+
+    <ion-row class="menu-rows">
+      <ion-col size="2">
+        <ion-icon name="person-add-outline"></ion-icon>
+      </ion-col>
+      <ion-col size="8">
+        <span class="menu-label"> Reviews </span>
+      </ion-col>
+      <ion-col size="2">
+        <ion-icon name="checkmark-outline"></ion-icon>
+      </ion-col>
+    </ion-row>
+
+    <ion-row class="menu-rows">
+      <ion-col size="2">
+        <ion-icon name="person-add-outline"></ion-icon>
+      </ion-col>
+      <ion-col size="8">
+        <span class="menu-label"> Help & Support </span>
+      </ion-col>
+      <ion-col size="2">
+        <ion-icon name="checkmark-outline"></ion-icon>
+      </ion-col>
+    </ion-row>
+
+    <ion-row class="menu-rows">
+      <ion-col size="2">
+        <ion-icon name="person-add-outline"></ion-icon>
+      </ion-col>
+      <ion-col size="8">
+        <span class="menu-label"> Invite Friends </span>
+      </ion-col>
+      <ion-col size="2">
+        <ion-icon name="checkmark-outline"></ion-icon>
+      </ion-col>
+    </ion-row>
+
+    <ion-row class="menu-rows">
+      <ion-col size="2">
+        <ion-icon name="person-add-outline"></ion-icon>
+      </ion-col>
+      <ion-col size="8">
+        <span class="menu-label"> About Us </span>
+      </ion-col>
+      <ion-col size="2">
+        <ion-icon name="checkmark-outline"></ion-icon>
+      </ion-col>
+    </ion-row>
+
+    <ion-row class="menu-rows" (click)="logout()">
+      <ion-col size="2">
+        <ion-icon name="person-add-outline"></ion-icon>
+      </ion-col>
+      <ion-col size="8">
+        <span class="menu-label"> Logout </span>
+      </ion-col>
+      <ion-col size="2">
+        <ion-icon name="checkmark-outline"></ion-icon>
+      </ion-col>
+    </ion-row>
+
   </div>
 
 
