--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -24,11 +24,28 @@ ion-content {
     --background: #fbfbfb;
 }
 
-.heading-section{
+.heading-section {
     text-align: center;
     font-style: italic;
     font-size: 14px;
     border-bottom: 1px solid #7e3289;
     padding: 6px;
     border-top: 1px solid #561d5e;
+}
+
+
+.middle-content {
+    text-align: center;
+    position: relative;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    margin: 0px 30px;
+}
+
+
+.input-content {
+    font-style: italic;
+    height: 50%;
 }
