--- a/src/global.scss
+++ b/src/global.scss
@@ -77,3 +77,11 @@ ion-toolbar {
 .header-name {
     margin-left: 30px;
 }
+
+.warning-text{
+    font-size: 12px;
+    font-style: italic;
+    color: #b72121;
+    padding-left: 10px;
+    margin: 0;
+}
