--- a/src/app/otp-verify/otp-verify.page.html
+++ b/src/app/otp-verify/otp-verify.page.html
@@ -26,13 +26,14 @@
       </h4>
       <ion-row text-center>
         <ion-col>
-          <ion-input #otp1 required maxLength="1" (keyup)="otpController($event,otp2,'')">
+          <ion-input id="otp1" type="number" #otp1 required maxLength="1" (keyup)="otpController($event,otp2,'')">
           </ion-input>
-          <ion-input #otp2 required maxLength="1" (keyup)="otpController($event,otp3,otp1)">
+          <ion-input id="otp2" type="number" #otp2 required maxLength="1" (keyup)="otpController($event,otp3,otp1)">
           </ion-input>
-          <ion-input #otp3 required maxLength="1" (keyup)="otpController($event,otp4,otp2)">
+          <ion-input id="otp3" type="number" #otp3 required maxLength="1" (keyup)="otpController($event,otp4,otp2)">
           </ion-input>
-          <ion-input #otp4 required maxLength="1" (keyup)="otpController($event,'',otp3)" (input)="VerifyNow()">
+          <ion-input id="otp4" type="number" #otp4 required maxLength="1" (keyup)="otpController($event,'',otp3)"
+            (input)="VerifyNow()">
           </ion-input>
         </ion-col>
       </ion-row>
