notification, job-detail, quotaion page

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -244,3 +244,12 @@
   --ion-color-shade: var(--ion-color-themepurple-shade, #561d5e) !important;
   --ion-color-tint: var(--ion-color-themepurple-tint, #561d5e) !important;
 }
+
+.ion-color-themeoutlinepurple {
+  --ion-color-base: var(--ion-color-themeoutlinepurple, #fff) !important;
+  --ion-color-base-rgb: var(--ion-color-themeoutlinepurple-rgb, 56, 128, 255) !important;
+  --ion-color-contrast: var(--ion-color-themeoutlinepurple-contrast, #561d5e) !important;
+  --ion-color-contrast-rgb: var(--ion-color-themeoutlinepurple-contrast-rgb, 255, 255, 255) !important;
+  --ion-color-shade: var(--ion-color-themeoutlinepurple-shade, #fff) !important;
+  --ion-color-tint: var(--ion-color-themeoutlinepurple-tint, #fff) !important;
+}
