--- a/src/app/job-details/job-details.page.html
+++ b/src/app/job-details/job-details.page.html
@@ -1,9 +1,81 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>job-details</ion-title>
+    <ion-title>Job Details</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
+<ion-content fullscreen>
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        <div>
+          <h3 class="page-title">Job Detail :</h3>
+          <p class="order-id">Order Id : 1545121</p>
+        </div>
+      </ion-col>
+      <ion-col>
+        <div>
+          <h6 class="date">16/07/2021</h6>
+        </div>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <div class="img-div">
+          <ion-img src="../.../../../assets/imgs/logo.png"></ion-img>
+        </div>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <div>
+          <p class="detail-content">
+            At vero eos et accusam et justo duo dolores et ea
+            rebum. Stet clita kasd gubergren, no sea takimata
+            sanctus est Lorem ipsum dolor sit amet.
+          </p>
+          <p class="detail-content">
+            Accusam et justo duo dolores et ea rebum. Stet
+            clita kasd gubergren, no sea takimata sanctus est
+            Lorem ipsum dolor sit amet.
+          </p>
+        </div>
+        <div>
+          <p class="date-2">01/00/2000</p>
+        </div>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <div>
+          <h5 class="address-tag">Address :</h5>
+        </div>
+        <div>
+          <h6 class="address">
+            H.n 12, Street road, near mega due 4d
+            Cafe, Udaipur
+          </h6>
+        </div>
+        <div>
+          <p class="detail-content">
+            Accusam et justo duo dolores et ea rebum. Stet
+            clita kasd gubergren, no sea takimata sanctus est
+            Lorem ipsum dolor sit amet Sampler.
+          </p>
+        </div>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <div>
+          <ion-button expand="block" color="themepurple">ACCEPT</ion-button>
+        </div>
+      </ion-col>
+      <ion-col>
+        <div>
+          <ion-button expand="block" color="themeoutlinepurple">DECLINE</ion-button>
+        </div>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
