--- a/src/app/notification/notification.page.html
+++ b/src/app/notification/notification.page.html
@@ -1,9 +1,62 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>notification</ion-title>
+    <ion-title>Notification</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content fullscreen>
+
+  <ion-list>
+
+    <ion-item lines="full">
+      <ion-label class="ion-text-wrap">
+        <h2>Finn</h2>
+        <p>Listen, I've had a pretty messed up day Listen, I've had a pretty messed up day !</p>
+      </ion-label>
+    </ion-item>
+
+    <ion-item lines="full">
+      <ion-label class="ion-text-wrap">
+        <h2>Finn</h2>
+        <p>Listen, I've had a pretty messed up day...</p>
+      </ion-label>
+    </ion-item>
+
+    <ion-item lines="full">
+      <ion-label class="ion-text-wrap">
+        <h2>Finn</h2>
+        <p>Listen, I've had a pretty messed up day...</p>
+      </ion-label>
+    </ion-item>
+
+    <ion-item lines="full">
+      <ion-label class="ion-text-wrap">
+        <h2>Finn</h2>
+        <p>Listen, I've had a pretty messed up day...</p>
+      </ion-label>
+    </ion-item>
+
+    <ion-item lines="full">
+      <ion-label class="ion-text-wrap">
+        <h2>Finn</h2>
+        <p>Listen, I've had a pretty messed up day...</p>
+      </ion-label>
+    </ion-item>
+
+    <ion-item lines="full">
+      <ion-label class="ion-text-wrap">
+        <h2>Finn</h2>
+        <p>Listen, I've had a pretty messed up day...</p>
+      </ion-label>
+    </ion-item>
+
+    <ion-item lines="full">
+      <ion-label class="ion-text-wrap">
+        <h2>Finn</h2>
+        <p>Listen, I've had a pretty messed up day...</p>
+      </ion-label>
+    </ion-item>
+
+  </ion-list>
 
 </ion-content>
