--- a/src/app/quotation/quotation.page.html
+++ b/src/app/quotation/quotation.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title style="color: #561d5e;">Quotation</ion-title>
+    <ion-title>Quotation</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -8,22 +8,19 @@
 
   <ion-grid>
     <ion-row>
-      <ion-col style="padding-top: 10px; padding-bottom: 0;">
-        <ion-label style="font-size: 14px; font-weight: 500; margin-bottom: 0;">Insurance Surveyor</ion-label>
+      <ion-col class="tag-con">
+        <ion-label class="tag">Insurance Surveyor</ion-label>
       </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col style="padding-top: 0;">
-        <ion-label style="color: #5e5e5e; font-size: 10px; font-weight: 600;" position="stacked">Preferred Date :
+      <ion-col class="date-tag-con">
+        <ion-label class="date-tag" position="stacked">Preferred Date :
           15-12-2021</ion-label>
       </ion-col>
     </ion-row>
     <ion-row>
       <ion-col>
-        <ion-textarea style="border: 1px solid #909090;
-        border-radius: 5px;
-        font-size: 14px;
-        min-height: 100px; margin: 0;" placeholder="Additional Description">
+        <ion-textarea class="text-area" placeholder="Additional Description">
         </ion-textarea>
       </ion-col>
     </ion-row>
