quotation page border changes

--- a/src/app/quotation/quotation.page.scss
+++ b/src/app/quotation/quotation.page.scss
@@ -15,14 +15,14 @@
 }
 
 .text-area {
-    border: 1px solid #561d5e;
+    border: 1px solid #909090;
     border-radius: 5px;
     font-size: 14px;
     min-height: 100px; margin: 0;
 }
 
 ion-input {
-    border: 1px solid #561d5e;
+    border: 1px solid #909090;
     border-radius: 5px;
     font-size: 14px;
 }
