--- a/src/app/quotation/quotation.page.html
+++ b/src/app/quotation/quotation.page.html
@@ -9,13 +9,14 @@
   <ion-grid>
     <ion-row>
       <ion-col class="tag-con">
-        <ion-label class="tag">Insurance Surveyor</ion-label>
+        <ion-label class="tag">{{JobDetails.title}}</ion-label>
       </ion-col>
     </ion-row>
     <ion-row>
       <ion-col class="date-tag-con">
         <ion-label class="date-tag" position="stacked">Preferred Date :
-          15-12-2021</ion-label>
+          {{apiService.formatDate(JobDetails.date)}}
+        </ion-label>
       </ion-col>
     </ion-row>
     <ion-row>
@@ -32,7 +33,8 @@
         <p class="amount-tag">Amount :</p>
       </ion-col>
       <ion-col>
-        <ion-input placeholder="0" type="number"></ion-input>
+        <ion-input placeholder="0" type="number" [(ngModel)]="CoreAmount" (input)="AmountChanged($event.target)">
+        </ion-input>
       </ion-col>
     </ion-row>
     <ion-row>
@@ -40,7 +42,8 @@
         <p>CGST @</p>
       </ion-col>
       <ion-col size="3">
-        <ion-input placeholder="0 %" type="number"></ion-input>
+        <ion-input placeholder="0 %" type="number" [(ngModel)]="CGST" (input)="TaxChanged($event.target, 'CGST')">
+        </ion-input>
       </ion-col>
       <ion-col size="6">
         <ion-input placeholder="0" type="number" disabled="true"></ion-input>
@@ -51,7 +54,7 @@
         <p>SGST @</p>
       </ion-col>
       <ion-col size="3">
-        <ion-input placeholder="0 %" type="number"></ion-input>
+        <ion-input placeholder="0 %" type="number" [(ngModel)]="SGST"></ion-input>
       </ion-col>
       <ion-col size="6">
         <ion-input placeholder="0" type="number" disabled="true"></ion-input>
@@ -62,7 +65,7 @@
         <p>IGST @</p>
       </ion-col>
       <ion-col size="3">
-        <ion-input placeholder="0 %" type="number"></ion-input>
+        <ion-input placeholder="0 %" type="number" [(ngModel)]="IGST"></ion-input>
       </ion-col>
       <ion-col size="6">
         <ion-input placeholder="0" type="number" disabled="true"></ion-input>
@@ -74,7 +77,7 @@
         <p class="tax-tag">* inclusive of all taxes</p>
       </ion-col>
       <ion-col>
-        <p>₹ 0.0/-</p>
+        <p>₹ {{TotalAmount}}/-</p>
       </ion-col>
     </ion-row>
   </ion-grid>
