--- a/src/app/job-details/job-details.page.html
+++ b/src/app/job-details/job-details.page.html
@@ -88,11 +88,57 @@
       </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col>
+      <ion-col *ngIf="JobDetails.status==0" size="12">
         <div>
           <ion-button expand="block" color="themepurple" (click)="AcceptJob()">ACCEPT</ion-button>
         </div>
       </ion-col>
+
+      <ion-col *ngIf="JobDetails.status==1" size="12">
+        <div>
+          <ion-button expand="block" color="themepurple" (click)="SendQuotation()">Send Quotation</ion-button>
+        </div>
+      </ion-col>
+
+      <ion-col *ngIf="JobDetails.status==2" size="12">
+        <div>
+          <ion-button expand="block" color="themepurple">Please wait for quotation approval</ion-button>
+        </div>
+      </ion-col>
+
+      <ion-col *ngIf="JobDetails.status==3  " size="6">
+        <div>
+          <ion-button expand="block" color="themepurple" (click)="StartStatus()">Start Job</ion-button>
+        </div>
+      </ion-col>
+
+      <ion-col *ngIf="JobDetails.status==5  " size="6">
+        <div>
+          <ion-button expand="block" color="themepurple" (click)="EndStatus()">End Job</ion-button>
+        </div>
+      </ion-col>
+
+      <ion-col size="12" *ngIf="JobDetails.status==4 ">
+        <div>
+          <ion-button expand="block" color="themepurple" (click)="SendQuotation()">Send New Quotation</ion-button>
+        </div>
+      </ion-col>
+
+
+      <ion-col size="6" *ngIf="JobDetails.status>=6  ">
+        <div>
+          <ion-button expand="block" color="themepurple">Job Completed</ion-button>
+        </div>
+      </ion-col>
+
+      <ion-col size="6" *ngIf="JobDetails.status==3 || JobDetails.status==5 || JobDetails.status==6 ">
+        <div>
+          <ion-button expand="block" color="themepurple" (click)="UpdateQuotation()">Update Quotation</ion-button>
+        </div>
+      </ion-col>
+
+
+
       <!-- <ion-col>
         <div>
           <ion-button expand="block" color="themeoutlinepurple">DECLINE</ion-button>
