--- a/src/app/settings/settings.page.scss
+++ b/src/app/settings/settings.page.scss
@@ -9,14 +9,16 @@ ion-avatar {
     font-weight: 500;
 }
 
-.menu-label {}
+.menu-label {
+    font-size: 12px;
+}
 
 
 .menu-rows {
     border-bottom: 1px solid #dfdfdf;
-    padding-bottom: 5px;
-    padding-top: 5px;
+    // padding-bottom: 5px;
+    // padding-top: 5px;
     margin-left: 15px;
     margin-right: 15px;
-    margin-bottom: 5px;
+    // margin-bottom: 5px;
 }
