--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,24 +1,21 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-
     <ion-row>
-
       <ion-col col-6>
         <ion-title>
           <img class="header-logo" src="assets/imgs/Icon.png">
           <span class="header-name"> Home </span>
         </ion-title>
       </ion-col>
-      <ion-col col-6 class="text-right">
-        <a>
-          <ion-icon name="ellipse"> </ion-icon>
+      <ion-col col-6 class="text-right status-user">
+        <a *ngIf="apiService.Get_UserStatus() == 'InActive' ">
+          <ion-icon name="ellipse" class="status-inactive"> </ion-icon> InActive
+        </a>
+        <a *ngIf="apiService.Get_UserStatus() == 'Active' ">
+          <ion-icon name="ellipse" class="status-active"> </ion-icon> Active
         </a>
       </ion-col>
-
     </ion-row>
-
-
-
   </ion-toolbar>
 </ion-header>
 
