--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -71,7 +71,7 @@
       </ion-col>
     </ion-row>
 
-    <ion-row class="menu-rows">
+    <ion-row class="menu-rows" (click)="reference()">
       <ion-col size="2">
         <ion-icon name="person-circle-outline"></ion-icon>
       </ion-col>
@@ -83,7 +83,7 @@
       </ion-col>
     </ion-row>
 
-    <ion-row class="menu-rows">
+    <ion-row class="menu-rows" (click)="training()">
       <ion-col size="2">
         <ion-icon name="newspaper-outline"></ion-icon>
       </ion-col>
@@ -115,7 +115,7 @@
         <span class="menu-label"> Reviews </span>
       </ion-col>
       <ion-col size="2">
-        <ion-icon name="checkmark-outline"></ion-icon>
+
       </ion-col>
     </ion-row>
 
@@ -127,7 +127,7 @@
         <span class="menu-label"> Help & Support </span>
       </ion-col>
       <ion-col size="2">
-        <ion-icon name="checkmark-outline"></ion-icon>
+
       </ion-col>
     </ion-row>
 
@@ -139,7 +139,7 @@
         <span class="menu-label"> Invite Friends </span>
       </ion-col>
       <ion-col size="2">
-        <ion-icon name="checkmark-outline"></ion-icon>
+
       </ion-col>
     </ion-row>
 
@@ -151,7 +151,7 @@
         <span class="menu-label"> About Us </span>
       </ion-col>
       <ion-col size="2">
-        <ion-icon name="checkmark-outline"></ion-icon>
+
       </ion-col>
     </ion-row>
 
@@ -163,7 +163,7 @@
         <span class="menu-label"> Logout </span>
       </ion-col>
       <ion-col size="2">
-        <ion-icon name="checkmark-outline"></ion-icon>
+
       </ion-col>
     </ion-row>
 
